accomplished the navbar to disapear when on small screens, but can not fix the remaining column to be full width - need to check that.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,9 +5,16 @@ svg {
 }
 
 @media only screen and (max-width : 767px) {
-  .same-height {
-    height: auto !important;
-  } 
+    .same-height {
+        height: auto !important;
+    }
+    #sidebar {
+        display: none; 
+        width: 0;
+    }
+    #eq-body{
+        width: auto !important;    
+    }
 }
 
 #mainMenu.affix {
